--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .bg-NavBar {
     background: rgb(64,74,74);
-    background: radial-gradient(circle, rgba(64,74,74,1) 0%, rgba(80,98,98,1) 20%, rgba(107,147,147,1) 50%, rgba(184,196,196,1) 80%, rgba(202,221,219,1) 100%);
+    background: radial-gradient(circle, rgba(64,74,74,1) 0%, rgba(80,98,98,1) 20%, rgba(107,147,147,1) 50%, rgba(184,196,196,1) 80%, rgba(202,221,219,1) 85%, rgba(255,255,255,1) 91%);
 }
 
 .imgLogo {
@@ -9,6 +9,17 @@
 
 li {
     margin: 0 2rem;
+    cursor: pointer;
+   
+    border-radius: 15%;
+    padding: 0.3rem;
+    color: #fff;
 }
 
+li:hover {
+    background-color: rgba(31, 32, 32, 0.795);
+}
+.container-fluid {
+    width: 70% !important;    
+}
 
